Modified index.html and script.js - Basic Structure Complete

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     
 </head>
 <body>
+    <div class="playchoice">
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+    </div>
+    <div>
+        <p class="results"></p>
+        <p class="score"></p>    
+    </div>
+    
+
     <script src="script.js"></script>
 </body>
 </html>
